mule-user-guide/v/3.5/foreach.adoc
=  Foreach范围

*Foreach*作用域将集合拆分为元素，并通过嵌入在作用域中的处理器迭代地处理它们，然后将原始消息返回给流。

== 使用Foreach与Splitter和Aggregator Pairs

通常，要创建一个处理包含元素集合的消息的流，您必须使用一个流控制将集合拆分为单独的元素（迭代地处理流），然后您必须使用另一个流控制将元素重新聚合为新收集，以便他们可以流出流程。几个Mule ESB的 link:/mule-user-guide/v/3.6/routers[流量控制]支持这种分割和重新聚合，但它们无法与Foreach范围的便利性相匹配。

分离器和聚合器对的使用也存在几个潜在的限制：

* 在某些情况下，将消息集合拆分成块可能会导致某些重要的XML元素（例如页眉或页脚中的元数据）从重新聚合的XML中删除。
* 例如，当您将某些集合类型（例如Java）分割成多个部分进行处理时，集合可能会重新聚合为不同的集合类型 -  *MuleMessageCollection*。 （因此，您可能需要添加额外的流程步骤以将处理后的消息集合转换回其原始集合类型。）
* 在分割，处理或聚合消息集合时，必须在多个分离器和聚合器类型中进行选择。有时，很难确定哪种分配器/聚合器组合最适合您的消息处理需求。

Foreach提供了几个优于split-aggregator对的优点：

*  Foreach将集合分解为元素，然后迭代地处理它们，而不丢失任何消息payload_。
*  Foreach在分割消息集合并处理各个元素之后，不会将这些单独元素重新聚合成MuleMessageCollection;相反，它会返回原始消息。 （这导致"Java in, Java out"而不是"Java in, MuleMessageCollection out."）
*  Foreach范围广泛;它可以迭代地处理来自任何类型集合的元素，包括地图，列表，数组和MuleMessageCollections。
*  Foreach作用域可以拆分并处理不属于消息有效载荷一部分的元素集合。例如，Foreach可以处理消息头中的消息属性集合（元数据）。

[WARNING]
====
如果元素是*mutable objects*（例如，其中具有不同字段的bean）以及Foreach范围中嵌入的任何消息处理器会修改原始对象的值（例如，其中一个字段），则一旦foreach将原始消息返回给流，字段的更改将一直存在。

换句话说，Foreach在处理消息时以及在将原始消息返回给流时都不会对数据进行深层复制。
====

== 配置Foreach

[tabs]
------
[tab,title="Studio Visual Editor"]
....
. Add a Foreach scope in your flow at the point where you want to initiate the Foreach scope processing.
+
image:for+each.png[for+each]

. Insert one or more message processors inside the Foreach scope area to define how Mule should process each element within the message collection. The Foreach scope can contain any number of message processors as well as references to child flows.
+
[WARNING]
====
The only type of message processor you _cannot_ drag into a Foreach scope is an *inbound connector*.

If you drag a two-way connector into a Foreach scope, Mule automatically converts it to an outbound-only connector.
====
+
image:foreach.png[foreach]
+
[%header%autowidth.spread]
|===
|Field |Default Value |Description |XML
|*Display Name* |For Each |Customize to display a unique name for the scope in your application. |`doc:name="For Each"`
|Collection | |(Optional) Enter an expression that tells Foreach where to find the data it must split and process. For example, enter an expression that instructs Foreach to split and process a collection from the header section – rather than the payload. Unless this field specifies otherwise, Foreach assumes that the message payload is the collection. |`collection="#[payload.topic]"`
|Counter Variable Name |counter |(Optional) Enter a name in this field to label the variable that Foreach uses to record the number of the elements it has processed. If your collection already uses the label counter for another variable, this field will be blank and you will need to enter a different label for the *Counter Variable Name*, such as `index`. |`counterVariableName="counter"`
|Batch Size |1 |(Optional) Enter an integer to indicate the number of elements in each batch that Foreach processes. Potentially, these batches promote quicker processing. If greater than one, each batch is treated as a separate Mule message. For example, if a collection has 200 elements and you set the batch size to 50, Foreach will iteratively process 4 batches of 50 elements, each as a separate Mule message. |`batchSize="50"`
|*Root Message Variable Name* |rootMessage |(Optional) Enter a name in this field to label the variable that Foreach uses to reference the complete, unsplit message collection. If your collection already uses the label rootMessage for another variable, this field will be blank and you will need to enter a different label for the *Root Message Variable Name*. |`rootMessageVariableName="rootMessage"`
|===
....
[tab,title="XML Editor or Standalone"]
....
. Add a foreach element to your flow at the point where you want to initiate a foreach processing block. Refer to the code sample below.
+
[%header%autowidth.spread]
|===
|Element |Description
|*foreach* |Use to create a block of message processors that iteratively process elements within a collection.
|===

. Configure the scope according to the table below
+
[%header%autowidth.spread]
|===
|Element Attribute |Default Value |Description
|*doc:name* |For Each a|
Customize to display a unique name for the async scope in your application.

Note: Attribute not required in Mule Standalone configuration.

|*collection* |Payload |(Optional) Enter an expression that tells Foreach where to find the data it must split and process. For example, enter an expression that instructs Foreach to split and process a collection from the header section – rather than the payload. Unless this attribute specifies otherwise, Foreach assumes that the message payload is the collection.
|*counterVariableName* |counter |(Optional) Specify to label the variable that Foreach uses to record the number of the elements it has processed. If your collection already uses the label `counter` for another variable, you will need to select a unique name.
|*batchSize* |1 |(Optional) Specify an integer to indicate the number of elements in each batch that Foreach processes. Potentially, these batches promote quicker processing. For example, if a collection has 200 elements and you set the batch size to 50, Foreach will iteratively process 4 batches of 50 elements.
|*rootMessageVariableName* |rootMessage |(Optional) Specify to label the variable that Foreach uses to reference the complete, unsplit message collection. If your collection already uses the label `rootMessage` for another variable, you will need to select a unique name.
|===
. Add nested elements beneath your `foreach` element to define how Mule should process each element within the message collection. The Foreach scope can contain any number of message processors as well as references to child flows. +
[source, xml, linenums]
----
<foreach collection="#[payload.name]" doc:name="For Each" counterVariableName="counter" rootMessageVariableName="rootMessage" batchSize="5">
    <some-nested-element/>
    <some-other-nested-element/>
</foreach>
----
....
------

==  Foreach错误处理

为您的流定义的异常策略将处理在Foreach范围内抛出的所有异常。 （如果您尚未明确定义流程的异常策略，则Mule会隐式应用 link:/mule-user-guide/v/3.7/error-handling[默认的例外策略]来处理异常。）如果集合中的消息引发异常，Foreach将停止处理该集合并调用异常策略。

例如，只要有两个条件成立，Foreach就会抛出`IllegalArgumentException`：

* 它收到一个不是集合的消息有效载荷
* 您尚未在邮件有效内容之外标识邮件集合（通过在Studio Visual Editor的*Collection*字段中输入表达式或在XML配置中包括`collection`属性来定义）。

== 持久数据时的注意事项

如果foreach范围内的消息被持久化，不仅集合中的项目将被序列化，而且所有与当前消息相关的变量也会被序列化。与消息关联的`rootMessage`变量包含可能包含数千个项目的完整非分离消息集合的引用。因此，当这个集合足够大时，`rootMessage`变量的序列化/反序列化会显着影响内存消耗。

为避免此问题，您必须先在消息中删除`rootMessage`变量，然后再保留它。为此，您可以像这样使用`<remove-variable>`元素：

[source, xml, linenums]
----
<remove-variable variableName="rootMessage" doc:name="Variable"/>
----

在Studio中，您可以拖动范围内的变量消息处理器并将其设置为"Remove Variable"。

== 示例

以下示例说明了使用Foreach将信息添加到集合中每条消息的流程。

HTTP连接器接收来自客户端的请求，然后查询JDBC数据库，其中表格指示各种汽车的型号名称和型号年份。 Foreach将集合（表格）拆分为元素（行）列表，每个元素包含有关各个元素（地图）`model:'ford sierra'`，model_year = 1982}}的信息。 Foreach通过其范围内的消息处理器发送每个元素。

该流程为每个元素的地图添加一个新条目;如果模型年份小于2001年，Mule会添加`type='20th century car'`，然后将该元素发送到*JMS*连接器;否则，Mule添加`type='21st century car'`并将该元素发送到*File*连接器。 Foreach在流程结束时返回一个集合并将其发送给变换器。

此特定示例将使用利用*Set Payload*和*HTTP Response Builder*构造块的自定义*Catch Exception Strategy*替换主流的默认异常策略。

image:for+each+example.png[对于每个+ +示例]

== 完整的示例代码

[source, xml, linenums]
----
<?xml version="1.0" encoding="UTF-8"?>
<mule xmlns="http://www.mulesoft.org/schema/mule/core"
      xmlns:http="http://www.mulesoft.org/schema/mule/http"
      xmlns:file="http://www.mulesoft.org/schema/mule/file"
      xmlns:jdbc="http://www.mulesoft.org/schema/mule/jdbc"
      xmlns:jms="http://www.mulesoft.org/schema/mule/jms"
      xmlns:scripting="http://www.mulesoft.org/schema/mule/scripting"
      xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
      xmlns:core="http://www.mulesoft.org/schema/mule/core"
      xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
      xsi:schemaLocation="
http://www.mulesoft.org/schema/mule/http http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/file http://www.mulesoft.org/schema/mule/file/current/mule-file.xsd
http://www.mulesoft.org/schema/mule/jdbc http://www.mulesoft.org/schema/mule/jdbc/current/mule-jdbc.xsd
http://www.mulesoft.org/schema/mule/jms http://www.mulesoft.org/schema/mule/jms/current/mule-jms.xsd
http://www.mulesoft.org/schema/mule/scripting http://www.mulesoft.org/schema/mule/scripting/current/mule-scripting.xsd
http://www.mulesoft.org/schema/mule/core http://www.mulesoft.org/schema/mule/core/current/mule.xsd">
 
    <jdbc:derby-data-source name="Derby_Data_Source" url="jdbc:derby:${app.home}/muleEmbeddedDB;create=true" transactionIsolation="UNSPECIFIED" doc:name="Derby Data Source"/>
    <jdbc:connector name="JDBCConnector" dataSource-ref="Derby_Data_Source" validateConnections="true" queryTimeout="-1" pollingFrequency="0" doc:name="JDBCConnector">
        <jdbc:query key="allcars" value="SELECT * FROM cars"/>
    </jdbc:connector>
    <jms:activemq-connector name="JMSConnector" doc:name="Active MQ"/>
    <flow name="process" doc:name="process">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="9091" path="process" doc:name="HTTP connector"/>
        <jdbc:outbound-endpoint exchange-pattern="request-response" queryKey="allcars" responseTimeout="10000" mimeType="text/plain" queryTimeout="-1" connector-ref="JDBCConnector" doc:name="Database (JDBC)"/>
        <foreach doc:name="Foreach">
            <choice doc:name="Choice">
                <when expression="payload['MODEL_YEAR'] &#38;lt; 2001">
                    <processor-chain>
                        <expression-component doc:name="Set payload type">payload['TYPE']='20th century car'</expression-component>
                        <jms:outbound-endpoint queue="in" doc:name="JMS"/>
                    </processor-chain>
                </when>
                <otherwise>
                    <processor-chain>
                        <expression-component doc:name="Set payload type">payload['TYPE']='21st century car'</expression-component>
                        <file:outbound-endpoint path="/tmp" responseTimeout="10000" doc:name="File"/>
                    </processor-chain>
                </otherwise>
            </choice>
        </foreach>
        <set-payload value="#[payload.size()] cars where processed: #[payload]" doc:name="Set response"/>
        <http:response-builder contentType="text/html" doc:name="HTTP Response Builder">
            <parse-template location="foreach_info.html" doc:name="Parse Template"/>
        </http:response-builder>
        <catch-exception-strategy doc:name="Catch Exception Strategy">
            <set-payload value="You need to populate the Database first" doc:name="DB is not populated"/>
            <http:response-builder status="500" contentType="text/html" doc:name="HTTP Response Builder">
                <parse-template location="foreach_error.html" doc:name="Parse Template"/>
            </http:response-builder>
        </catch-exception-strategy>
    </flow>
    <flow name="populate" doc:name="populate">
        <http:inbound-endpoint exchange-pattern="request-response" host="localhost" port="9091" path="populate" doc:name="HTTP connector"/>
        <scripting:component doc:name="Script to populate DB">
            <scripting:script engine="Groovy">
                <scripting:text><![CDATA[jdbcConnector = muleContext.getRegistry().lookupConnector("JDBCConnector");
qr = jdbcConnector.getQueryRunner();
conn = jdbcConnector.getConnection();
qr.update(conn, "CREATE TABLE cars (model varchar(256), model_year integer)");
qr.update(conn, "INSERT INTO cars values('Ford Sierra', 1982)");
qr.update(conn, "INSERT INTO cars values('Opel Astra', 2001)");]]></scripting:text>
            </scripting:script>
        </scripting:component>
        <set-payload value="Successfully populated the database" doc:name="Set Payload"/>
        <http:response-builder contentType="text/html" doc:name="HTTP Response Builder">
            <parse-template location="foreach_info.html" doc:name="Parse Template"/>
        </http:response-builder>
        <catch-exception-strategy doc:name="Catch Exception Strategy">
            <set-payload value="DB already populated" doc:name="Database Already populated"/>
            <http:response-builder status="500" contentType="text/html" doc:name="HTTP Response Builder">
                <parse-template location="foreach_error.html" doc:name="Parse Template"/>
            </http:response-builder>
        </catch-exception-strategy>
    </flow>
</mule>
----
